# simple-rpc

./: CMakeLists.txt  README.md
dependencies/include/fmt/: core.h  format.h
examples/: CMakeLists.txt
examples/ex1/: main.cpp
examples/json-test/: main.cpp
examples/rpc-node/: main.cpp
examples/server-benchmark/: benchmarker.py  main.cpp
examples/server-benchmarker-client/: main.cpp
examples/what/: main  main.cpp
include/simple-rpc/: client.h  dispatcher.h  rpc_client.h  rpc_message.h  rpc_node.h  separate_json.h  server.h  tcp_connection.h  utils.h
include/simple-rpc/id-generators/: abstract_id_generator.h  chronological_id_generator.h  sequential_id_generator.h  uuid_generator.h
src/: CMakeLists.txt
src/simple-rpc/: client.cpp  rpc_client.cpp  rpc_node.cpp  server.cpp  tcp_connection.cpp
